log
Thu 05 Oct 2023 05:27:21 PM UTC: 
 tests:  0|5
total_score: 0/70
ef20156
Thu 05 Oct 2023 05:35:23 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
d129d55
Thu 05 Oct 2023 05:39:01 PM UTC: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6eeb112
Thu 05 Oct 2023 05:42:57 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
d4c4cd2
Thu 05 Oct 2023 05:43:16 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b2eaefd
Thu 05 Oct 2023 05:43:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8709bc1
Thu 05 Oct 2023 05:48:40 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: unused variable ‘submatiz’ [-Werror=unused-variable]
   49 |   int submatiz[9][10]={0};
      |       ^~~~~~~~
sudoku.c:48:8: error: unused variable ‘columna’ [-Werror=unused-variable]
   48 |   int  columna[9][10]={0};
      |        ^~~~~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][10]={0};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
53370e6
Thu 05 Oct 2023 05:50:18 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:52:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   52 |       int dato=n->sudo[i][j];
      |           ^~~~
sudoku.c:49:7: error: unused variable ‘submatiz’ [-Werror=unused-variable]
   49 |   int submatiz[9][10]={0};
      |       ^~~~~~~~
sudoku.c:48:8: error: unused variable ‘columna’ [-Werror=unused-variable]
   48 |   int  columna[9][10]={0};
      |        ^~~~~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][10]={0};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
cf6267c
Thu 05 Oct 2023 05:52:09 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: unused variable ‘submatiz’ [-Werror=unused-variable]
   49 |   int submatiz[9][10]={0};
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8b088e9
Thu 05 Oct 2023 05:55:16 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:66:28: error: ‘j’ undeclared (first use in this function)
   66 |     int verificar=3*(i/3)+(j/3);
      |                            ^
sudoku.c:66:28: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:67:29: error: ‘dato’ undeclared (first use in this function)
   67 |     if(submatriz[verificar][dato]==1){
      |                             ^~~~
sudoku.c:49:7: error: variable ‘submatriz’ set but not used [-Werror=unused-but-set-variable]
   49 |   int submatriz[9][10]={0};
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b6448d7
Thu 05 Oct 2023 05:56:08 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
eb02912
Thu 05 Oct 2023 05:58:07 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|4
total_score: 15/70
f821bbe
Thu 05 Oct 2023 06:00:06 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4c6c5ad
Thu 05 Oct 2023 06:38:41 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
a8ec231
Thu 05 Oct 2023 06:43:57 PM UTC: 
 sudoku.c | 43 ++++++++++++++++++++++++++++---------------
 1 file changed, 28 insertions(+), 15 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: unused variable ‘submatriz’ [-Werror=unused-variable]
   49 |   int submatriz[10]={0};
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9d911e2
Thu 05 Oct 2023 06:48:25 PM UTC: 
 sudoku.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  2|4
total_score: 15/70
40bcf5d
Thu 05 Oct 2023 06:50:54 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
80cd0b6
Thu 05 Oct 2023 06:54:56 PM UTC: 
 sudoku.c | 47 +++++++++++++++++++++++++++--------------------
 1 file changed, 27 insertions(+), 20 deletions(-)
 tests:  2|4
total_score: 15/70
6fda9b8
Thu 05 Oct 2023 06:57:22 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
dd939ae
Thu 05 Oct 2023 07:06:46 PM UTC: 
 sudoku.c | 18 +++---------------
 1 file changed, 3 insertions(+), 15 deletions(-)
 tests:  2|4
total_score: 15/70
8278ad1
Fri 06 Oct 2023 11:47:36 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
5ace076
Fri 06 Oct 2023 11:49:36 PM UTC: 
 sudoku.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  2|4
total_score: 15/70
135a69b
Fri 06 Oct 2023 11:50:48 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  2|4
total_score: 15/70
c790b5d
Fri 06 Oct 2023 11:53:22 PM UTC: 
 sudoku.c | 41 -----------------------------------------
 1 file changed, 41 deletions(-)
 tests:  2|4
total_score: 15/70
078e769
Fri 06 Oct 2023 11:59:29 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: unused variable ‘submatriz’ [-Werror=unused-variable]
   49 |   int submatriz[9][10]={0};
      |       ^~~~~~~~~
sudoku.c:48:7: error: unused variable ‘revisarcolumna’ [-Werror=unused-variable]
   48 |   int revisarcolumna[9][10]={0};
      |       ^~~~~~~~~~~~~~
sudoku.c:47:7: error: unused variable ‘revisarfila’ [-Werror=unused-variable]
   47 |   int revisarfila[9][10]={0};
      |       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1985e16
Sat 07 Oct 2023 12:01:07 AM UTC: 
 sudoku.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
 tests:  2|4
total_score: 15/70
1162478
Sat 07 Oct 2023 12:06:13 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:109:13: error: ‘sudo’ undeclared (first use in this function)
  109 |           n>sudo[i][j]=aux;
      |             ^~~~
sudoku.c:109:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
18e3754
Sat 07 Oct 2023 12:06:18 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b36168f
